...
            if Reachability.isConnectedToNetwork(){
                let videoUrl = lesson!.video_url

                downloadTask = downloadVideoSesson!.downloadTask(with: URL(string: videoUrl)!)
                downloadTask!.resume()
                downloadAlertView = UIAlertController(title: "Download Video\n", message: nil, preferredStyle: .alert)
                downloadAlertView!.addAction(UIAlertAction(title: "Cancel download", style: .cancel, handler: { [self] action in
                    print("Cancel download")
                    downloadTask!.cancel()
                }))

                present(downloadAlertView!, animated: true, completion: { [self] in
                    //  Add your progressbar after alert is shown (and measured)
...
